# redcube-ai

./: .agent-contract-baseline.json  .env.example  .fallowrc.json  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT_STATUS.md  LICENSE  README.md  README.zh-CN.md  RedCube AI Web.command  RedCube AI.command  SECURITY.md  TASTE.md  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json  tsconfig.package-build.json  tsconfig.tests.json  tsconfig.typecheck.json
.codex-plugin/: plugin.json
.sentrux/: baseline.json
agent/: README.md
contracts/: README.md  action_catalog.json  agent_lab_cost_profile.json  agent_lab_handoff.json  artifact_locator_contract.json  capability_map.json  cognitive_kernel_adoption.json  domain_descriptor.json  domain_handler_registry.json  foundry-agent-os-domain-kernel-manifest.json  foundry_agent_series.json  functional_privatization_audit.json  generated_surface_handoff.json  golden_path_profile.json  live_stage_run_progress_evidence.json  memory_descriptor.json  opl-native-profile.json  opl_agent_package_manifest.json  opl_domain_manifest_registration.json  opl_ledger_artifact_registration.json  owner_chain_live_progress_evidence.json  owner_receipt_contract.json  pack_compiler_input.json  physical_source_morphology_policy.json  private_functional_surface_policy.json  source_closure_audit.json  stage_artifact_kernel_adoption.json  stage_control_plane.json  stage_operating_principles.json  stage_quality_cycle_policy.json  stage_run_canary_evidence.json  stage_run_kernel_profile.json  standard-agent-principles-adoption.json  standard_agent_conformance_profile.json  standard_agent_interface.json  state_index_kernel_adoption.json  temporal_stage_run_consumption_policy.json  visual_transition_adapter_profile.json  workspace_lifecycle_policy.json
docs/: README.md  README.zh-CN.md  architecture.md  decisions.md  deep_research_auto_first_product_contract.md  direct_delivery_longrun_target_state.md  docs_portfolio_consolidation.md  documentation-governance.md  domain-harness-os-positioning.md  human_quickstart.md  image-first-ppt-production-route.md  invariants.md  native-ppt-proof-environment.md  phase_2_direct_delivery_operator_handoff_hardening.md  phase_2_family_parity_autopilot_continuation_board.md  phase_2_family_parity_governance_surface_convergence.md  phase_2_operator_surface_consistency_hardening.md  project.md  (+11 more)
(+1464 files in other folders)
