[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redcube-ai"
version = "0.2.0"
description = "RedCube AI Python native helper package for PPT and document automation lanes."
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

[project.optional-dependencies]
ppt = ["Pillow", "python-pptx"]
review = ["playwright"]
native = ["Pillow", "python-pptx", "playwright"]

[project.scripts]
redcube-native-helper-doctor = "redcube_ai.native_helpers.doctor:main"
redcube-ppt-deck-review = "redcube_ai.native_helpers.ppt_deck.review:main"
redcube-ppt-deck-export = "redcube_ai.native_helpers.ppt_deck.export:main"
redcube-ppt-deck-native = "redcube_ai.native_helpers.ppt_deck.native:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
cache_dir = "/tmp/redcube-ai-pytest-cache"
